capture db only config; add materialized table refresh to cron

--- a/compose/replication-cron.yml
+++ b/compose/replication-cron.yml
@@ -6,3 +6,4 @@ services:
   musicbrainz:
     volumes:
       - ${MUSICBRAINZ_CRONTAB_PATH:-./default/replication.cron}:/crons.conf
+      - ./build/musicbrainz/scripts/update-materialized.sh:/usr/local/bin/update-materialized.sh
