--- a/docker-compose.alt.db-only-mirror.yml
+++ b/docker-compose.alt.db-only-mirror.yml
@@ -1,5 +1,3 @@
-version: '3.1'
-
 # Description: Database-only mirror, as an alternative to 'default'
 
 volumes:
@@ -25,8 +23,8 @@ services:
     shm_size: "2GB"
     volumes:
       - pgdata:/var/lib/postgresql/data
-    expose:
-      - "5432"
+    ports:
+      - "5432:5432"
 
   musicbrainz:
     build:
